Fixed sidebar style issues on mobile

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -41,7 +41,7 @@ html {
 }
 @media (min-width: 58rem) {
   html {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
@@ -80,7 +80,7 @@ html {
   color: #fff;
   margin-top: 0;
   font-family: "Abril Fatface", serif;
-  font-size: 3.25rem;
+  font-size: 3.0rem;
 }
 
 /* Sidebar nav */
@@ -90,6 +90,7 @@ html {
 }
 .sidebar-nav-item {
   display: block;
+  margin-bottom: 1rem;
 }
 a.sidebar-nav-item:hover,
 a.sidebar-nav-item:focus {
@@ -99,13 +100,35 @@ a.sidebar-nav-item:focus {
   font-weight: bold;
 }
 .sidebar-link-item {
-  /*display: block;*/
   font-size: 14px;
+  font-weight: 200;
 }
 
 .sidebar-about img{
-  max-width: 90%;
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+@media (min-width: 48rem) {
+  .sidebar-sticky {
+    position: absolute;
+    top:    1rem;
+    right:  1rem;
+    bottom: 1rem;
+    left:   1rem;
+  }
+
+  .sidebar-about img{
+    max-width: 80%;
+    margin: 0 0 1rem;
+  }
+
+  .sidebar-nav {
+    padding-left: 0;
+  }
+}
+
 
 /* Sticky sidebar
  *
@@ -153,8 +176,8 @@ a.sidebar-nav-item:focus {
 @media (min-width: 64rem) {
   .resume {
         max-width:48rem;
-        margin-left: 1rem;
-        margin-right: 1rem;    
+        margin-left: 2rem;
+        margin-right: 2rem;    
   }
 }
 
